--- a/index.html
+++ b/index.html
@@ -1,77 +1,130 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Hifz Progress Dashboard</title>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Dashboard — Madrasa Kifālat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<nav class="topnav">
-  <div class="container d-flex justify-content-between align-items-center">
-    <a class="brand d-flex align-items-center gap-2" href="index.html">
-      <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
-      <span>Madrasa Kifālat — Gadwal</span>
-    </a>
-    <div class="nav-links">
-      <a href="index.html" class="active">Home</a>
-      <a href="students.html">Students</a>
-      <a href="sponsors.html">Sponsors</a>
-      <a href="payments.html">Payments</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+  <nav class="topnav">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a class="brand d-flex align-items-center gap-2" href="index.html">
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
+        <span>Madrasa Kifālat — Gadwal</span>
+      </a>
+      <div class="nav-links">
+        <a href="index.html" class="active">Home</a>
+        <a href="students.html">Students</a>
+        <a href="sponsors.html">Sponsors</a>
+        <a href="payments.html">Payments</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </div>
-  </div>
-</nav>
-
+  </nav>
 
   <main class="container mt-4">
-    <div class="row g-3">
-      <div class="col-md-8">
-        <div class="card p-3">
-          <h2>Welcome</h2>
-          <p class="muted">This dashboard shows student Hifz progress and sponsor (kifālat) details.</p>
-          <div id="recent-updates" class="mt-3"></div>
-        </div>
-      </div>
+    <div class="card p-4 mb-4">
+      <h2>📊 Hifz Progress Dashboard</h2>
+      <p class="muted">A quick glance at student progress and sponsorship distribution.</p>
 
-      <div class="col-md-4">
-        <div class="card p-3 mb-3">
-          <div class="muted">Total Students</div>
-          <div id="stat-total" class="stat-big">—</div>
+      <div class="row g-4 mt-2">
+        <div class="col-md-4 text-center">
+          <div class="card p-3">
+            <h5>Total Students</h5>
+            <div id="statTotal" class="stat-big">—</div>
+          </div>
         </div>
-        <div class="card p-3">
-          <div class="muted">Average Progress</div>
-          <div id="stat-avg" class="stat-big">—</div>
+        <div class="col-md-4 text-center">
+          <div class="card p-3">
+            <h5>Average Progress</h5>
+            <div id="statAvg" class="stat-big">—</div>
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="card p-3">
+            <h5>Total Sponsors</h5>
+            <div id="statSponsors" class="stat-big">—</div>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="mt-4">
-      <a class="btn btn-outline-primary" href="students.html">View Students</a>
-      <a class="btn btn-outline-secondary" href="sponsors.html">View Sponsors</a>
+    <div class="card p-4 mb-4">
+      <h3>📈 Overall Student Progress</h3>
+      <canvas id="chartProgress" height="100"></canvas>
+    </div>
+
+    <div class="card p-4 mb-4">
+      <h3>💚 Students per Sponsor</h3>
+      <canvas id="chartSponsors" height="100"></canvas>
+    </div>
+
+    <div class="card p-4 mb-4">
+      <h3>🕋 Message</h3>
+      <p>Madrasa Kifālat is a humble initiative to empower education through compassion, collaboration, and sincerity — purely for the sake of Aakhirah.</p>
     </div>
   </main>
 
-  <script src="assets/app.js"></script>
+  <script src="assets/app.js?v=2"></script>
   <script>
-    // simple page init: show top 5 updated students (by para desc)
-    (async function(){
-      const data = await window.loadData();
-      const recent = data.students.slice().sort((a,b)=> (b.para||0) - (a.para||0) ).slice(0,17);
-      const container = document.getElementById('recent-updates');
-      container.innerHTML = recent.map(s=>`
-        <div class="mini-row">
-          <div><strong>${escapeHTML(s.name)}</strong> — <span class="muted">${escapeHTML(s.sponsor)}</span></div>
-          <div class="muted">Para: ${s.para || 0} — ${s.progress_pct || 0}%</div>
-        </div>
-      `).join('');
-      document.getElementById('stat-total').textContent = data.students.length;
-      const avg = Math.round((data.students.reduce((sum,s)=>sum+(s.progress_pct||0),0) / Math.max(1,data.students.length)));
-      document.getElementById('stat-avg').textContent = avg + '%';
-    })();
+  (async function(){
+    const data = await window.loadData();
+    const students = data.students;
+
+    // Stats
+    const total = students.length;
+    const avg = Math.round(students.reduce((a,b)=>a+(b.progress_pct||0),0)/Math.max(1,total));
+    const sponsors = [...new Set(students.map(s=>s.sponsor))].filter(Boolean).length;
+
+    document.getElementById('statTotal').textContent = total;
+    document.getElementById('statAvg').textContent = avg + '%';
+    document.getElementById('statSponsors').textContent = sponsors;
+
+    // Chart 1: Student progress distribution
+    const bins = [0,10,20,30,40,50,60,70,80,90,100];
+    const counts = Array(bins.length).fill(0);
+    students.forEach(s=>{
+      const idx = Math.min(Math.floor((s.progress_pct||0)/10),10);
+      counts[idx]++;
+    });
+
+    new Chart(document.getElementById('chartProgress'), {
+      type: 'bar',
+      data: {
+        labels: bins.map(b=>b+'%'),
+        datasets: [{
+          label: 'Students',
+          data: counts,
+          borderWidth: 1
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: { legend: { display: false } },
+        scales: { y: { beginAtZero: true, ticks: { stepSize: 1 } } }
+      }
+    });
+
+    // Chart 2: Students per sponsor
+    const sponsorGroups = students.reduce((a,b)=>{a[b.sponsor]=(a[b.sponsor]||0)+1;return a;}, {});
+    const sLabels = Object.keys(sponsorGroups);
+    const sCounts = Object.values(sponsorGroups);
+    new Chart(document.getElementById('chartSponsors'), {
+      type: 'doughnut',
+      data: {
+        labels: sLabels,
+        datasets: [{
+          data: sCounts,
+          borderWidth: 1
+        }]
+      },
+      options: { plugins:{ legend:{ position:'bottom' } } }
+    });
+  })();
   </script>
 </body>
 </html>
