--- a/students.html
+++ b/students.html
@@ -1,120 +1,115 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Students — Madrasa</title>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Students — Madrasa Kifālat</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
 </head>
 <body>
-<nav class="topnav">
-  <div class="container d-flex justify-content-between align-items-center">
-    <a class="brand d-flex align-items-center gap-2" href="index.html">
-      <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
-      <span>Madrasa Kifālat — Gadwal</span>
-    </a>
-    <div class="nav-links">
-      <a href="index.html" class="active">Home</a>
-      <a href="students.html">Students</a>
-      <a href="sponsors.html">Sponsors</a>
-      <a href="payments.html">Payments</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+  <nav class="topnav">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a class="brand d-flex align-items-center gap-2" href="index.html">
+        <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
+        <span>Madrasa Kifālat — Gadwal</span>
+      </a>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="students.html" class="active">Students</a>
+        <a href="sponsors.html">Sponsors</a>
+        <a href="payments.html">Payments</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </div>
-  </div>
-</nav>
-
+  </nav>
 
   <main class="container mt-4">
-    <div class="d-flex gap-2 mb-3 align-items-center">
-      <input id="q" class="form-control" placeholder="Search name/place/father/sponsor...">
+    <div class="d-flex flex-wrap gap-2 mb-3 align-items-center">
+      <input id="q" class="form-control" placeholder="Search by name, place, father, or sponsor..." style="flex:1; min-width:200px;">
       <select id="filterSponsor" class="form-select w-auto"><option value="">All Sponsors</option></select>
       <select id="filterGender" class="form-select w-auto"><option value="">All Gender</option><option value="M">Male</option><option value="F">Female</option></select>
+      <select id="sortBy" class="form-select w-auto">
+        <option value="">Sort By</option>
+        <option value="name">Name</option>
+        <option value="para">Para (Ascending)</option>
+        <option value="paraDesc">Para (Descending)</option>
+        <option value="progress">Progress %</option>
+        <option value="sponsor">Sponsor</option>
+      </select>
     </div>
 
     <div class="card p-0">
       <div class="table-responsive">
         <table class="table mb-0" id="tbl">
-          <thead class="table-light"><tr><th>Name</th><th>Father</th><th>Place</th><th>Sponsor</th><th>Para</th><th>Progress</th></tr></thead>
+          <thead class="table-light">
+            <tr>
+              <th>Name</th><th>Father</th><th>Place</th><th>Sponsor</th><th>Para</th><th>Progress</th>
+            </tr>
+          </thead>
           <tbody></tbody>
         </table>
       </div>
     </div>
   </main>
 
-  <!-- student detail modal -->
-  <div class="modal fade" id="studentModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header"><h5 id="modalName"></h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
-        <div class="modal-body" id="modalBody"></div>
-        <div class="modal-footer"><button class="btn btn-secondary" data-bs-dismiss="modal">Close</button></div>
-      </div>
-    </div>
-  </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/app.js"></script>
   <script>
-    (async function(){
-      const data = await window.loadData();
-      window._students = data.students;
-      // populate sponsor filter
-      const sponsors = [...new Set(data.students.map(s=>s.sponsor).filter(Boolean))].sort();
-      const sel = document.getElementById('filterSponsor');
-      sponsors.forEach(sp=>{ const o=document.createElement('option'); o.value=sp; o.text=sp; sel.appendChild(o); });
+  (async function(){
+    const data = await window.loadData();
+    const students = data.students || [];
 
-      function render(){
-        const q = document.getElementById('q').value.trim().toLowerCase();
-        const sponsor = document.getElementById('filterSponsor').value;
-        const gender = document.getElementById('filterGender').value;
-        let list = data.students.slice();
-        if(sponsor) list = list.filter(s=>s.sponsor===sponsor);
-        if(gender) list = list.filter(s=>s.gender===gender);
-        if(q) list = list.filter(s => (s.name+' '+s.father+' '+s.place+' '+s.sponsor).toLowerCase().includes(q));
-        const tbody = document.querySelector('#tbl tbody');
-        tbody.innerHTML = list.map(s=>`
-          <tr data-id="${s.id}">
-            <td><a href="#" class="open" data-id="${s.id}">${escapeHTML(s.name)}</a></td>
-            <td>${escapeHTML(s.father)}</td>
-            <td>${escapeHTML(s.place)}</td>
-            <td>${escapeHTML(s.sponsor)}</td>
-            <td>${s.para||0}</td>
-            <td style="width:300px">
-              <div class="pbar"><div class="fill" style="width:${s.progress_pct||0}%"></div></div>
-              <div class="muted small">${s.progress_pct||0}%</div>
-            </td>
-          </tr>`).join('');
-        // attach click handlers
-        document.querySelectorAll('#tbl a.open').forEach(a=>{
-          a.onclick = (e)=>{ e.preventDefault(); openModal(a.dataset.id); }
+    const sponsors = [...new Set(students.map(s=>s.sponsor).filter(Boolean))].sort();
+    const sel = document.getElementById('filterSponsor');
+    sponsors.forEach(sp=>{ const o=document.createElement('option'); o.value=sp; o.text=sp; sel.appendChild(o); });
+
+    function render(){
+      const q = document.getElementById('q').value.trim().toLowerCase();
+      const sponsor = document.getElementById('filterSponsor').value;
+      const gender = document.getElementById('filterGender').value;
+      const sort = document.getElementById('sortBy').value;
+
+      let list = students.slice();
+      if(sponsor) list = list.filter(s=>s.sponsor===sponsor);
+      if(gender) list = list.filter(s=>s.gender===gender);
+      if(q) list = list.filter(s => (s.name+' '+s.father+' '+s.place+' '+s.sponsor).toLowerCase().includes(q));
+
+      if(sort){
+        list.sort((a,b)=>{
+          if(sort==='name') return a.name.localeCompare(b.name);
+          if(sort==='sponsor') return a.sponsor.localeCompare(b.sponsor);
+          if(sort==='para') return (a.para||0)-(b.para||0);
+          if(sort==='paraDesc') return (b.para||0)-(a.para||0);
+          if(sort==='progress') return (b.progress_pct||0)-(a.progress_pct||0);
+          return 0;
         });
       }
 
-      function openModal(id){
-        const s = data.students.find(x=> String(x.id)===String(id));
-        if(!s) return;
-        document.getElementById('modalName').textContent = s.name;
-        document.getElementById('modalBody').innerHTML = `
-          <p><strong>Father:</strong> ${escapeHTML(s.father)}</p>
-          <p><strong>Place:</strong> ${escapeHTML(s.place)}</p>
-          <p><strong>Sponsor:</strong> ${escapeHTML(s.sponsor)}</p>
-          <p><strong>Para:</strong> ${s.para||0}</p>
-          <p><strong>Progress:</strong> ${s.progress_pct||0}%</p>
-        `;
-        new bootstrap.Modal(document.getElementById('studentModal')).show();
-      }
+      const tbody = document.querySelector('#tbl tbody');
+      tbody.innerHTML = list.map(s=>`
+        <tr>
+          <td>${escapeHTML(s.name)}</td>
+          <td>${escapeHTML(s.father)}</td>
+          <td>${escapeHTML(s.place)}</td>
+          <td>${escapeHTML(s.sponsor)}</td>
+          <td>${s.para||0}</td>
+          <td style="width:240px">
+            <div class="pbar"><div class="fill" style="width:${s.progress_pct||0}%"></div></div>
+            <div class="muted small mt-1">${s.progress_pct||0}%</div>
+          </td>
+        </tr>
+      `).join('');
+    }
 
-      // live UI bindings
-      document.getElementById('q').addEventListener('input', render);
-      document.getElementById('filterSponsor').addEventListener('change', render);
-      document.getElementById('filterGender').addEventListener('change', render);
+    document.getElementById('q').addEventListener('input', render);
+    document.getElementById('filterSponsor').addEventListener('change', render);
+    document.getElementById('filterGender').addEventListener('change', render);
+    document.getElementById('sortBy').addEventListener('change', render);
 
-      render();
-      setTimeout(()=> document.querySelectorAll('.pbar .fill').forEach((f,i)=>{ const w=f.style.width; f.style.width='0%'; setTimeout(()=>f.style.width=w,120+i*20); }),200);
-    })();
+    render();
+  })();
   </script>
 </body>
 </html>
