--- a/index.html
+++ b/index.html
@@ -10,22 +10,33 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="topnav">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a class="brand d-flex align-items-center gap-2" href="index.html">
-        <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="20" height="20" alt="Home">
-        <span>Madrasa Kifālat — Gadwal</span>
-      </a>
-<div class="nav-links">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="students.html">Students</a>
-  <a href="sponsors.html">Sponsors</a>
-  <a href="payments.html">Payments</a>
-  <a href="contact.html">Contact</a>
-</div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" width="22" height="22" alt="Home">
+      <span>Madrasa Kifālat — Gadwal</span>
+    </a>
+
+    <!-- Hamburger button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+      aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Collapsible links -->
+    <div class="collapse navbar-collapse" id="mainNavbar">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="students.html">Students</a></li>
+        <li class="nav-item"><a class="nav-link" href="sponsors.html">Sponsors</a></li>
+        <li class="nav-item"><a class="nav-link" href="payments.html">Payments</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- Main -->
   <main class="container mt-4">
