--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       </ul>
 
       <h3>🌐 Website</h3>
-      <p>Our GitHub Pages site: <a href="https://github.com/madrasa-kifaalat/Hifz-Progress" target="_blank">https://madrasa-kifaalat.github.io/Hifz-Progress/</a></p>
+      <p>Our GitHub Pages site: <a href="https://github.com/madrasa-kifaalat/Hifz-Progress" target="_blank">https://github.com/madrasa-kifaalat/Hifz-Progress/</a></p>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
